<resources>
    <string name="app_name">Memory WOD</string>
    <string name="title_activity_play_game">Memory WOD</string>
    <string name="numberOfTries">Tries: </string>
    <string name="title_activity_add_high_score">Save Score</string>
    <string name="title_activity_view_scores">Scores</string>
    <string name="save_score">Save Score</string>
    <string name="your_score_was">Number of tries:</string>
    <string name="validation_msg_player_name_required">You must type your name</string>
    <string name="add_score_ask_player_name">What\'s your name?</string>
    <string name="button_best_scores">Best Scores</string>
    <string name="button_game_type_hard">Hard</string>
    <string name="button_game_type_medium">Medium</string>
    <string name="button_game_type_easy">Easy</string>
    <string name="button_game_type_no_brain">No Brain</string>
    <string name="msg_choose_game_type">Choose the level:</string>
    <string name="msg_choose_graphics">Choose the graphics:</string>
    <string-array name="graphics">
        <item>Animals</item>
        <item>Drawings</item>
        <item>Bugs</item>
    </string-array>
</resources>
