<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainLayout">

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="35sp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorAccent"
        android:text="@string/app_name"
        />

    <TextView
        android:id="@+id/subTitle"
        android:layout_below="@id/mainTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/msg_choose_game_type"
        />

    <Button
        android:id="@+id/noBrainButton"
        android:layout_below="@id/subTitle"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:text="@string/button_game_type_no_brain"
        android:visibility="gone"/>

    <Button
        android:id="@+id/easyButton"
        android:layout_below="@id/noBrainButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:text="@string/button_game_type_easy"/>

    <Button
        android:id="@+id/mediumButton"
        android:layout_below="@id/easyButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:text="@string/button_game_type_medium"/>

    <Button
        android:id="@+id/hardButton"
        android:layout_below="@id/mediumButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:text="@string/button_game_type_hard"/>

    <TextView
        android:id="@+id/chooseGraphics"
        android:layout_below="@id/hardButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/msg_choose_graphics"
        />

    <Spinner
        android:id="@+id/graphicsSpinner"
        android:layout_below="@id/chooseGraphics"
        android:layout_centerHorizontal="true"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"/>

    <Button
        android:id="@+id/viewScoresButton"
        android:layout_below="@id/graphicsSpinner"
        android:layout_marginTop="25dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_centerHorizontal="true"
        android:text="@string/button_best_scores"
        style="@style/Widget.AppCompat.Button.Colored"
        />

    <TextView
        android:id="@+id/version"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorAccent"
        android:autoLink="web"
        android:text="github.com/uncopyrightedapps"
        />

</RelativeLayout>